# eps2016

./: .gitignore  CMakeLists.txt  convert_tsp_txt.py  d1291.txt  tsp_data.7z
ampl/: tsp.run  tsp_flow.run
cpp/: CMakeLists.txt  TSPAlgo.cc  TSPAlgo.h  TSPExample.cc  TSPExample.h  TSPInstance.cc  TSPInstance.h  TSPSolver.cc  TSPSolver.h  callback.cc  eps2016.cc
data/: ali535.txt  att532.txt  bier127.txt  brd14051.txt  burma14.txt  d1291.txt  d15112.txt  d1655.txt  d18512.txt  d198.txt  d2103.txt  d493.txt  d657.txt  dsj1000.txt  fl1400.txt  fl1577.txt  fl3795.txt  fl417.txt  fnl4461.txt  gil262.txt  gr137.txt  gr431.txt  gr666.txt  kroB150.txt  kroB200.txt  kroD100.txt  kroE100.txt  lin105.txt  lin318.txt  nrw1379.txt  p654.txt  pcb1173.txt  pcb3038.txt  pcb442.txt  pla33810.txt  pla7397.txt  pla85900.txt  pr124.txt  pr136.txt  pr144.txt  (+27 more)
eps2016/: CMakeLists.txt  TSPAlgo.cc  TSPAlgo.h  TSPFormulation.cc  TSPFormulation.h  TSPHeuristic.cc  TSPHeuristic.h  TSPInstance.cc  TSPInstance.h  TSPSolver.cc  TSPSolver.h  callback.cc  callback.h  common.h
exe/: CMakeLists.txt  eps2016_heur.cc  eps2016_mip.cc  flow_build.cc
src/: Callback.java  MipSolEnum.java  MipSolPool.java  TSPAlgo.cc  TSPAlgo.h  TSPExample.java  TSPFormulation.cc  TSPFormulation.h  TSPFormulationDegree.cc  TSPFormulationDegree.h  TSPFormulationFlow.cc  TSPFormulationFlow.h  TSPHeuristic.cc  TSPHeuristic.h  TSPInstance.cc  TSPInstance.h  TSPInstance.java  TSPSolver.cc  TSPSolver.h  TSPXpressSolver.java  Trimloss.java  callback.cc  callback.h  xbcutex.java
