 
CMAKE_MINIMUM_REQUIRED(VERSION 3.0.3)
PROJECT(EPS2016)

IF(WIN32)
	SET( EXECUTABLE_OUTPUT_PATH    ${CMAKE_BINARY_DIR})
	SET( LIBRARY_OUTPUT_PATH       ${CMAKE_BINARY_DIR}) 
	SET( RUNTIME_OUTPUT_DIRECTORY  ${CMAKE_BINARY_DIR})
ELSE()
	SET( EXECUTABLE_OUTPUT_PATH    ${CMAKE_BINARY_DIR}/bin)
	SET( LIBRARY_OUTPUT_PATH       ${CMAKE_BINARY_DIR}/bin)
	SET( RUNTIME_OUTPUT_DIRECTORY  ${CMAKE_BINARY_DIR}/bin)
ENDIF(WIN32)

 
SET(XPRESS_DIR $ENV{XPRESSDIR})
# SET(XPRESS_DIR "c:/xpressmp-7.8-x32")
SET(XPRESS_INC ${XPRESS_DIR}/include)
SET(XPRESS_LIB ${XPRESS_DIR}/lib)


MESSAGE("XPRESS_DIR : ${XPRESS_DIR}")
MESSAGE("XPRESS_INC : ${XPRESS_INC}")
MESSAGE("XPRESS_LIB : ${XPRESS_LIB}")

INCLUDE_DIRECTORIES(${XPRESS_INC})
LINK_DIRECTORIES(${XPRESS_LIB})

ADD_SUBDIRECTORY(eps2016)

INCLUDE_DIRECTORIES(eps2016)
ADD_SUBDIRECTORY(exe)