 
CMAKE_MINIMUM_REQUIRED(VERSION 3.0.2)
PROJECT(EPS2016)

IF(WIN32)
	SET( EXECUTABLE_OUTPUT_PATH    ${CMAKE_BINARY_DIR})
	SET( LIBRARY_OUTPUT_PATH       ${CMAKE_BINARY_DIR}) 
	SET( RUNTIME_OUTPUT_DIRECTORY  ${CMAKE_BINARY_DIR})
ELSE()
	SET( EXECUTABLE_OUTPUT_PATH    ${CMAKE_BINARY_DIR}/bin)
	SET( LIBRARY_OUTPUT_PATH       ${CMAKE_BINARY_DIR}/bin)
	SET( RUNTIME_OUTPUT_DIRECTORY  ${CMAKE_BINARY_DIR}/bin)
ENDIF(WIN32)

 
SET(XPRESS_DIR $ENV{XPRESSDIR})
# SET(XPRESS_DIR "c:/xpressmp-7.8-x32")
SET(XPRESS_INC ${XPRESS_DIR}/include)
SET(XPRESS_LIB ${XPRESS_DIR}/lib)


MESSAGE("XPRESS_DIR : ${XPRESS_DIR}")
MESSAGE("XPRESS_INC : ${XPRESS_INC}")
MESSAGE("XPRESS_LIB : ${XPRESS_LIB}")

INCLUDE_DIRECTORIES(${XPRESS_INC})
LINK_DIRECTORIES(${XPRESS_LIB})

FILE(GLOB_RECURSE SRC *.cc *.h) 
IF(WIN32)
	
ELSE()
	SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11 -fopenmp")
ENDIF(WIN32)

ADD_LIBRARY(eps2016 STATIC ${SRC} )
# TARGET_LINK_LIBRARIES(eps2016 xprs)

MESSAGE("SRC is ${SRC}")
